# Incident-intelligence-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml
architecture/decisions/: adr-001-llm-selection.md
config/: app_config.yaml  logging.yaml  schema.json
deployment/docker/: Dockerfile  docker-compose.yml
deployment/env/: prod.env
deployment/kubernetes/: deployment.yaml
docs/: architecture.md  data_flow.md  evaluation_methodology.md  security_considerations.md  system_overview.md
prompts/: entity_extraction.md  evaluation_prompts.md  incident_structuring.md  severity_scoring.md
scripts/: evaluate_model.py  load_test_data.py  run_local.sh
src/: main.py
src/api/: __init__.py  routes.py  schemas.py
src/automation/: __init__.py  escalation_logic.py  n8n_client.py  notification_dispatcher.py
src/evaluation/: __init__.py  evaluator.py  golden_dataset.py  metrics.py
src/ingestion/: __init__.py  email_ingestor.py  file_ingestor.py  webhook_ingestor.py
src/intelligence/: __init__.py  confidence_estimator.py  entity_extractor.py  incident_classifier.py  severity_scorer.py
src/llm/: __init__.py  client.py  prompt_builder.py  response_parser.py  validator.py
src/preprocessing/: __init__.py  language_detection.py  normalization.py  text_cleaner.py
src/storage/: __init__.py  incident_model.py  models.py  repository.py
src/utils/: exceptions.py  helpers.py  logger.py
tests/fixtures/: sample_incident.json
tests/integration/: __init__.py  test_full_pipeline.py  test_n8n_webhook.py
tests/unit/: __init__.py  test_automation.py  test_ingestion.py  test_intelligence.py  test_llm.py  test_preprocessing.py
workflows/n8n/: escalation_flow.json  incident_intake.json  (+1 more)
(+2 files in other folders)
